# portal-ui

./:  CHANGELOG-hmp-183-fix-donor-derived-samples.md  .dockerignore  .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  .travis.yml  CHANGELOG-10x.md  CHANGELOG-1496.md  CHANGELOG-3d-tissue-maps.md  CHANGELOG-403-if-not-logged-in.md  CHANGELOG-403.md  CHANGELOG-977_fix.md  CHANGELOG-CAT-159.md  CHANGELOG-CAT-162.md  CHANGELOG-CAT-454.md  CHANGELOG-CAT-533.md  CHANGELOG-CAT-536.md  CHANGELOG-CAT-605.md  CHANGELOG-CAT-610.md  CHANGELOG-CAT-677.md  CHANGELOG-EUI-release-fix.md  CHANGELOG-HMP-123-Convert-Flask-Data-to-Context-for-Sample-page.md  CHANGELOG-HMP-157-Add-error-messages-to-workspace-creation-dialog-10-datasets-protected-datasets-selected.md  CHANGELOG-HMP-233.md  CHANGELOG-HMP-241-Improve-error-messaging-for-deleted-user-saved-list.md  CHANGELOG-HMP-255-rename-lightbluelink-to-internallink.md  CHANGELOG-HMP-288-Entity-API-failure-messaging-for-Globus-links.md  CHANGELOG-HMP-302-Implement-icons-for-entity-headers-and-tables-Swedlow-feedback-response.MD  CHANGELOG-HMP-303-Implement-icons-for-detail-pages-for-Swedlow-feedback-response.md  CHANGELOG-HMP-305-Implement-tooltips-for-Swedlow-feedback-response.md  CHANGELOG-HMP-320-Wrong-blue-for-link-on-organ-page.md  CHANGELOG-HMP-330.md  CHANGELOG-HMP-337.md  CHANGELOG-HMP-350.md  CHANGELOG-HMP-383.md  CHANGELOG-HMP-389.md  CHANGELOG-HMP-390.md  CHANGELOG-HMP-404.md  CHANGELOG-HMP-407-jest.md  (+1814 more)
context/: .babelrc  .dockerignore  .eslintignore  .eslintrc.yml  .npm-upgrade.json  .npmrc  .prettierrc.yml  .swcrc  CHANGELOG-add-items-no-list-dialog.md  CHANGELOG-cat-1382-cat-1381.md  CHANGELOG-donor-metadata-tests.md  CHANGELOG-fix-misplaced-changelogs.md  CHANGELOG-marked.md  CHANGELOG-max-width.md  CHANGELOG-sample-tissue-tests.md  CHANGELOG-search-bar.md  CHANGELOG-styled-components.md  Dockerfile  assay-stats.py  constraint.txt  constraints.txt  eslint.config.mjs  eslint.cypress.config.mjs  eslint.jest.config.mjs  eslint.markdown.config.mjs  eslint.storybook.config.mjs  eslint.vitest.config.mjs  eslint.yaml.config.mjs  global.d.ts  gunicorn.conf.py  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  portal.nginx.conf  prestart.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  (+9 more)
context/.husky/: pre-commit
context/.storybook/: main.js  main.ts  preview.js  preview.tsx
context/app/: all_labels.csv  config.py  default_config.py  doc_utils.py  flask_static_digest.py  main.py  notebooks.py  render_utils.py  routes_api.py  routes_auth.py  routes_browse.py  routes_cell_types.py  routes_cells.py  routes_file_based.py  routes_main.py  routes_markdown.py  routes_notebooks.py  routes_scfind.py  routes_udi.py  routes_workspaces.py  test_markdown.py  test_portal.py  test_render.py  test_render_utils.py  test_routes_api.py  test_routes_browse.py  test_routes_cells.py  test_routes_errors.py  test_routes_file_based.py  test_routes_main.py  test_routes_notebooks.py  test_routes_scfind.py  test_routes_udi.py  test_utils.py  test_validation_utils.py  udi_example_prompts.json  utils.py  utils_datapackage.py  validation_utils.py
context/app/__mocks__/: vitessce.js
context/app/api/: client.py  client_utils.py  mock_client.py  test_client.py  test_vitessce.py  vitessce.py  vitessce_conf_builder
context/app/api/vitessce_confs/: __init__.py  anndata_builders.py  assay_confs.py  assays.py  base_builders.py  base_confs.py  builder_factory.py  constants.py  imaging_builders.py  paths.py  scatterplot_builders.py  sprm_builders.py  test_builders.py  test_confs.py  utils.py  (+1 more)
context/app/figure/: build_figure.py  figure.ipynb
context/app/markdown/: CHANGELOG.md  README.markdown  about.md  apis.md  apis.redirect  assays.md  client-side-error.md  dependencies.md  docs.md  docs.redirect  fake.md  help.md  metadata.md  notebooks.md  toc.md
context/app/notebook/: anndata.ipynb  files.ipynb  inspect_ometiff_metadata.ipynb  metadata.ipynb  validate_kaggle1_segmentation_alignment.ipynb
context/app/notebooks/: validate_kaggle1_segmentation_alignment.ipynb
context/app/organ/: README.md  README.txt  adipose-tissue.yaml  bladder.yaml  blood-vasculature.yaml  blood.yaml  bone-marrow.yaml  bony-pelvis.md  bony-pelvis.yaml  brain.md  brain.yaml  bronchus.yaml  eye.yaml  fallopian-tube.yaml  fetal-development.md  fetal-development.yaml  heart.md  heart.yaml  intervertebral-disc.yaml  kidney-left.md  kidney-left.yaml  kidney-right.md  kidney-right.yaml  kidney.yaml  knee.yaml  large-intestine.md  large-intestine.yaml  larynx.yaml  left-kidney.md  liver.md  liver.yaml  lung-left.md  lung-left.yaml  lung-right.md  lung-right.yaml  lung.yaml  lungs.yaml  lymph-node.md  lymph-node.yaml  lymph-vasculature.yaml  (+32 more)
context/app/preview/: 3d-maps.md  3d-tissue-maps.md  anatomical-structures-cell-types-and-biomarkers-tables.md  cell-type-annotations.md  liver-map.md  multimodal-mass-spectrometry-imaging-data.md  multimodal-molecular-imaging-data.md  satija.md  spraggins.md  todo.md
context/app/publication/: README.markdown  kidney-cell-states-and-niches.md  kidney-cell-states-atlas.md
context/app/schemas/: README.md  dataset.schema.yaml  dataset.yml  donor.schema.yaml  donor.yml  entity.yml  file.yml  sample.schema.yaml  sample.yml
context/app/showcase/: satija.md  spraggins.md  spraggins.yaml
context/app/static/: VERSION  jsconfig.json
context/build-utils/: alias.js  aliases.js  webpack.analyze.js  webpack.common.js  webpack.dev.js  webpack.dev.maintenance.js  webpack.maintenance.js  webpack.plugins.js  webpack.prod.js
context/cypress/integration/: portal-ui.spec.js
context/test-utils/: functions.js  functions.tsx  setupTests.js  setupTests.ts  setupTestsBeforeEnv.js
context/test-utils/fixtures/: dataProductMetadata.js  dataProductMetadata.ts
context/test-utils/loaders/: ymlLoader.js
(+4080 files in other folders)
