[project]
name = "hubmap-portal-ui"
version = "1.34.0"
description = "HuBMAP Data Portal - Flask app with React frontend"
readme = "README.md"
requires-python = ">=3.12.8"
license = "MIT"
authors = [
    {name = "HuBMAP Consortium", email = "help@hubmapconsortium.org"},
]
keywords = ["hubmap", "portal", "bioinformatics", "flask", "react"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "Flask>=3.1.1",
    "Flask[async]>=3.1.1",
    "globus-sdk>=3.59.0",
    "requests>=2.32.5",
    "pyyaml>=6.0.2",
    "python-frontmatter>=1.1.0",
    "hubmap-api-py-client>=0.0.11",
    "hubmap-commons>=2.1.20",
    "boto3>=1.39.3",
    "lxml>=6.0.0",
    "portal-visualization @ https://github.com/hubmapconsortium/portal-visualization/archive/refs/tags/0.4.18.zip",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "flake8>=7.3.0",
    "pytest-mock>=3.14.1",
    "autopep8>=2.3.2",
    "pip-tools>=7.4.1",
    "papermill>=2.6.0",
    "matplotlib>=3.10.5",
]

[project.urls]
Homepage = "https://portal.hubmapconsortium.org/"
Repository = "https://github.com/hubmapconsortium/portal-ui"
Documentation = "https://github.com/hubmapconsortium/portal-ui/blob/main/README.md"
"Bug Tracker" = "https://github.com/hubmapconsortium/portal-ui/issues"

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
constraint-dependencies = [
    # Frozenlist resolves to v1.3.0 otherwise, which fails to build on python 3.12
    "frozenlist>=1.4.1",
    # Security constraints from dependabot
    "tornado>=6.5",
    "setuptools>=78.1.1",
    "urllib3>=2.5.0",
    "Jinja2>=3.1.6",
    "certifi>=2024.7.4",
    "cryptography>=44.0.1",
    "tqdm>=4.66.3",
    "aiohttp>=3.12.14",
    "pip>=25.2",
    # For compatibility between requirements and requirements-dev
    "traitlets>=5.14.3",
]

[tool.uv.sources]
portal-visualization = { url = "https://github.com/hubmapconsortium/portal-visualization/archive/refs/tags/0.4.18.zip" }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".venv",
    "venv",
    "env",
    ".env",
]

[tool.autopep8]
max_line_length = 88
aggressive = 1

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["*.csv", "*.json", "*.yml", "*.yaml"]
